Fix header spacing

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -149,6 +149,7 @@ a.inSpeech {
   align-items: flex-start;
   text-align: left;
   margin-top: 162px;
+  margin-bottom: 162px;
 }
 
 .emoji {
